<resources>
    <string name="app_name">CTF Time</string>
    <string name="title">Title</string>
    <string name="ctf_time_logo">CTF Time Logo</string>

    <string name="navdrawer_open">Open navigation drawer</string>
    <string name="navdrawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>

    <string name="default_rank">1</string>
    <string name="default_name">CTF Time for Android</string>
    <string name="default_country">US</string>
    <string name="default_points">9001</string>

    <string name="navbar_home_title">Home</string>
    <string name="navbar_rankings_title">Rankings</string>
    <string name="navbar_events_title">Events</string>
    <string name="navbar_writeups_title">Writeups</string>
    <string name="navbar_search_title">Search</string>

    <string name="drawer_notifications_title">Notifications</string>
    <string name="drawer_settings_title">Settings</string>
    <string name="drawer_about_title">About this app</string>
    <string name="drawer_donate_title">Donate</string>

    <string name="toolbar_home">Home</string>
    <string name="toolbar_team_rankings">Team Rankings</string>
    <string name="toolbar_team_profiles">Team Profiles</string>
    <string name="teams">Teams</string>
    <string name="team_profile_image">Team Profile Image</string>
    <string name="previous_rankings">Previous Rankings</string>
    <string name="team_members">Team Members</string>
    <string name="team_aliases">Team Aliases</string>
    <string name="top_ten_card_title">Top Ten Teams</string>

    <string name="current_year">2018</string>
    <string name="year">Year</string>
    <string name="rank">Rank</string>
    <string name="team_name">Team Name</string>
    <string name="points">Points</string>
    <string name="Country">Country</string>
    <string name="rankings_spinner_hint">In order to change which year\'s rankings you want to view, select the year from this spinner</string>
    <string name="team_search_hint">Enter the team name in the search bar above</string>
    <string name="rankings_end_hint">No more rankings available</string>
    <string name="team_flag_description">Team country flag</string>

    <string name="team_load_error">Failed to load team.</string>

</resources>
