<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <!-- <group> -->
        <item
            android:id="@+id/drawer_home"
            android:icon="@drawable/navigation_home"
            android:title="@string/navbar_home_title" />

        <item
            android:id="@+id/drawer_notifications"
            android:icon="@drawable/navigation_notifications"
            android:title="@string/drawer_notifications_title" />

        <item
            android:id="@+id/drawer_settings"
            android:icon="@drawable/navigation_settings"
            android:title="@string/drawer_settings_title" />
    <!--
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item>
    -->
</menu>
